# vanguard

./: .env.example.bak  .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt  run_lens.py  run_scout.py  test.md
.github/workflows/: link-to-project.yml
config/: core_settings.yaml.example
config/scouts/: jobspy.yaml.example
docs/: GLOSSARY.md  PAEP.md  PROJECT_INDEX.md  SDD.md  migration_info
docs/contracts/: VAN_CONTRACT_DISCOVERY.md  VAN_CONTRACT_INTERFACE.md  _VAN_CONTRACT_MASTER.md
docs/schemas/: VAN_SCHEMA_PERSISTENCE.md
docs/specs/: FUNCTIONAL_SPEC.md  PROJECT_CHARTER.md  TECHNICAL_DESIGN.md  TOOL_REVIEW.md
scripts/: migrate_career_urls.py
scripts/patches/: jobspy_glassdoor_bff.py
src/: base_scout.py  job_search_scout.py  jobspy_scout.py  persistence_interface.py  scout_core.py
src/api/: app.py
src/api/templates/: index.html
src/utils/: career_page_parser.py
src/vanguard/: core.py
src/vanguard/discovery/: base_strategy.py  orchestrator.py
src/vanguard/discovery/strategies/: heuristics.py
src/vanguard/models/: company.py  discovery.py  lead.py
src/vanguard/persistence/: base_dao.py  companies_dao.py  engine.py  leads_dao.py  migration_manager.py
src/vanguard/scouts/: base.py  job_search.py  jobspy.py
tests/: test_career_parser.py  test_company_registry.py  test_domain_resolver.py  test_pydantic_validation.py  test_scout_flow.py  test_weighted_discovery.py  validate_sqlite_migration.py
