[project]
name = "vanguard"
version = "0.1.0-alpha.1"
description = "SurvivalStack | High-Fidelity Lead Discovery Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0.1",
    "beautifulsoup4>=4.12.3",
    "curl_cffi>=0.7.1",
    "ddgs>=9.14.2",
    "fastapi>=0.111.0",
    "jinja2>=3.1.4",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "python-jobspy>=1.1.40",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
]

[tool.uv]
managed = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "ruff>=0.4.10",
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "commitizen>=3.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
